--- a/TBA/BONWhenView.storyboard
+++ b/TBA/BONWhenView.storyboard
@@ -340,6 +340,73 @@
             </objects>
             <point key="canvasLocation" x="2518" y="186"/>
         </scene>
+        <!--What View Controller-->
+        <scene sceneID="uXO-29-uwG">
+            <objects>
+                <viewController storyboardIdentifier="mealPic3" id="O2a-ZG-o39" customClass="BONWhatViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aQw-JT-h8I"/>
+                        <viewControllerLayoutGuide type="bottom" id="ekq-UJ-B3L"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gdF-Xl-amJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t8D-hk-S7G">
+                                <rect key="frame" x="225" y="545" width="150" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="submitInfo:" destination="O2a-ZG-o39" eventType="touchUpInside" id="D2W-xR-QSN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0HJ-q0-Rhr">
+                                <rect key="frame" x="225" y="495" width="150" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <state key="normal" title="Back"/>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="What did you eat?" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHC-j9-pXN">
+                                <rect key="frame" x="0.0" y="20" width="600" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="iKA-0u-c09"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="t8D-hk-S7G" firstAttribute="centerX" secondItem="gdF-Xl-amJ" secondAttribute="centerX" id="6Y9-Jz-MgV"/>
+                            <constraint firstItem="0HJ-q0-Rhr" firstAttribute="height" secondItem="gdF-Xl-amJ" secondAttribute="height" multiplier="0.05" id="7Gh-Jt-G9l"/>
+                            <constraint firstItem="0HJ-q0-Rhr" firstAttribute="centerX" secondItem="gdF-Xl-amJ" secondAttribute="centerX" id="CrF-yN-C2d"/>
+                            <constraint firstItem="YHC-j9-pXN" firstAttribute="top" secondItem="aQw-JT-h8I" secondAttribute="bottom" id="HK3-Yx-9Vd"/>
+                            <constraint firstItem="0HJ-q0-Rhr" firstAttribute="width" secondItem="gdF-Xl-amJ" secondAttribute="width" multiplier="0.25" id="Xb0-oG-Vxc"/>
+                            <constraint firstItem="t8D-hk-S7G" firstAttribute="top" secondItem="0HJ-q0-Rhr" secondAttribute="bottom" constant="20" id="cfL-iR-Jqd"/>
+                            <constraint firstItem="t8D-hk-S7G" firstAttribute="height" secondItem="gdF-Xl-amJ" secondAttribute="height" multiplier="0.05" id="cwT-Yn-Jfu"/>
+                            <constraint firstItem="YHC-j9-pXN" firstAttribute="centerX" secondItem="gdF-Xl-amJ" secondAttribute="centerX" id="fmA-Bt-mL7"/>
+                            <constraint firstItem="ekq-UJ-B3L" firstAttribute="top" secondItem="t8D-hk-S7G" secondAttribute="bottom" constant="25" id="gpz-38-8T8"/>
+                            <constraint firstItem="YHC-j9-pXN" firstAttribute="width" secondItem="gdF-Xl-amJ" secondAttribute="width" id="ht9-nU-UgH"/>
+                            <constraint firstItem="t8D-hk-S7G" firstAttribute="width" secondItem="gdF-Xl-amJ" secondAttribute="width" multiplier="0.25" id="xw1-2o-heO"/>
+                            <constraint firstItem="ekq-UJ-B3L" firstAttribute="top" secondItem="t8D-hk-S7G" secondAttribute="bottom" constant="8" id="yPJ-xI-ldU"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="yPJ-xI-ldU"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="backButton" destination="0HJ-q0-Rhr" id="2Zc-gR-X0i"/>
+                        <outlet property="backButtonBottomConstraint" destination="cfL-iR-Jqd" id="scF-lN-eva"/>
+                        <outlet property="submitButton" destination="t8D-hk-S7G" id="zHT-lO-xQc"/>
+                        <outlet property="submitButtonBottomConstraint" destination="gpz-38-8T8" id="Zae-0e-c4P"/>
+                        <outlet property="whatDidYouEatTextLabel" destination="YHC-j9-pXN" id="0CK-1Z-0ke"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Kl-pz-mY8" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3122" y="252"/>
+        </scene>
     </scenes>
     <resources>
         <image name="how1" width="79" height="80"/>
