--- a/TBA/BONNotificationsSettingsView.storyboard
+++ b/TBA/BONNotificationsSettingsView.storyboard
@@ -19,16 +19,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="ixd-Uh-gAj" userLabel="All Pickers">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="50" width="600" height="550"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set Your Notifications" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LaS-bw-i7g">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="29"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="28"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="37"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="z4b-n7-ukP" userLabel="Breakfast Picker and Switch">
-                                        <rect key="frame" x="0.0" y="29" width="600" height="163"/>
+                                        <rect key="frame" x="0.0" y="28" width="600" height="154"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Gh-rM-nhH">
                                                 <rect key="frame" x="240" y="0.0" width="122" height="31"/>
@@ -36,7 +36,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Breakfast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cj9-sK-WZA">
                                                         <rect key="frame" x="0.0" y="0.0" width="73" height="31"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="751" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rFU-aN-Ggj">
@@ -45,7 +45,7 @@
                                                 </subviews>
                                             </stackView>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQ6-ZN-HOb">
-                                                <rect key="frame" x="0.0" y="31" width="600" height="132"/>
+                                                <rect key="frame" x="0.0" y="31" width="600" height="123"/>
                                                 <date key="date" timeIntervalSinceReferenceDate="482065200.53681999">
                                                     <!--2016-04-11 11:00:00 +0000-->
                                                 </date>
@@ -56,7 +56,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="P73-LC-6QA" userLabel="Lunch Picker and Switch">
-                                        <rect key="frame" x="0.0" y="192" width="600" height="162"/>
+                                        <rect key="frame" x="0.0" y="182" width="600" height="154"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7lr-aE-A8D">
                                                 <rect key="frame" x="252" y="0.0" width="97" height="31"/>
@@ -64,7 +64,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Lunch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DmT-wz-mbi">
                                                         <rect key="frame" x="0.0" y="0.0" width="48" height="31"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" verticalCompressionResistancePriority="751" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DNT-fC-Cam">
@@ -73,7 +73,7 @@
                                                 </subviews>
                                             </stackView>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Edt-VP-JiZ">
-                                                <rect key="frame" x="0.0" y="31" width="600" height="131"/>
+                                                <rect key="frame" x="0.0" y="31" width="600" height="123"/>
                                                 <date key="date" timeIntervalSinceReferenceDate="482083200.53681999">
                                                     <!--2016-04-11 16:00:00 +0000-->
                                                 </date>
@@ -84,7 +84,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="NmN-68-Igb" userLabel="Dinner Picker and Switch">
-                                        <rect key="frame" x="0.0" y="354" width="600" height="162"/>
+                                        <rect key="frame" x="0.0" y="335" width="600" height="154"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ute-dz-ze3">
                                                 <rect key="frame" x="251" y="0.0" width="100" height="31"/>
@@ -92,7 +92,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Dinner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yy-i7-EkY">
                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" verticalCompressionResistancePriority="751" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vD1-jJ-082">
@@ -101,7 +101,7 @@
                                                 </subviews>
                                             </stackView>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxm-Vy-0Pr">
-                                                <rect key="frame" x="0.0" y="31" width="600" height="131"/>
+                                                <rect key="frame" x="0.0" y="31" width="600" height="123"/>
                                                 <date key="date" timeIntervalSinceReferenceDate="482101200.53681999">
                                                     <!--2016-04-11 21:00:00 +0000-->
                                                 </date>
@@ -112,7 +112,7 @@
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xTy-H9-n4u">
-                                        <rect key="frame" x="0.0" y="516" width="600" height="33"/>
+                                        <rect key="frame" x="0.0" y="489" width="600" height="31"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                         <state key="normal" title="Back"/>
                                         <connections>
@@ -120,7 +120,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J5b-oo-wxr">
-                                        <rect key="frame" x="0.0" y="548" width="600" height="32"/>
+                                        <rect key="frame" x="0.0" y="520" width="600" height="31"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                         <state key="normal" title="Submit"/>
                                         <connections>
@@ -137,7 +137,7 @@
                             <constraint firstItem="ixd-Uh-gAj" firstAttribute="height" secondItem="v3A-fN-NbA" secondAttribute="height" id="RB0-09-DNn"/>
                             <constraint firstAttribute="bottom" secondItem="ixd-Uh-gAj" secondAttribute="bottom" id="Zlb-gf-3TZ"/>
                             <constraint firstAttribute="trailing" secondItem="ixd-Uh-gAj" secondAttribute="trailing" id="as9-Ks-DHC"/>
-                            <constraint firstItem="ixd-Uh-gAj" firstAttribute="top" secondItem="pFO-oX-8Bd" secondAttribute="bottom" id="bSH-6u-7oc"/>
+                            <constraint firstItem="ixd-Uh-gAj" firstAttribute="top" secondItem="pFO-oX-8Bd" secondAttribute="bottom" constant="30" id="bSH-6u-7oc"/>
                             <constraint firstItem="ixd-Uh-gAj" firstAttribute="width" secondItem="v3A-fN-NbA" secondAttribute="width" id="f0t-CX-DrW"/>
                             <constraint firstItem="ixd-Uh-gAj" firstAttribute="centerY" secondItem="v3A-fN-NbA" secondAttribute="centerY" multiplier="1.1" id="u73-aX-zM3"/>
                         </constraints>
